# TranscriptorPy

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  salida.md
agents/: analyst_agent.md  tdd_agent.md
docs/decisions/: ADR-001.md  ADR-002-motor-de-transcripcion.md  ADR-003-stack-de-soporte.md  ADR-004-metadata-via-ffprobe.md  ADR-005-formato-de-extraccion-de-audio.md  ADR-006-troceo-como-decorador.md  ADR-007-libreria-de-pdf.md  ADR-008-composicion.md  ADR-009-diseno-de-la-api-http.md  ADR-010-mapeo-de-errores-http.md  ADR-011-ca-bundle-del-cliente-openai.md  ADR-012-nombre-de-temporal-no-deriva-del-cliente.md  ADR-013-encuadre-del-frontend.md
features/: descargar_transcripcion.feature  sesion_anonima.feature  transcribir_desde_archivo.feature  transcribir_desde_url.feature
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.vue  contratos.js  main.js
specs/: spec_formal.md
src/transcriptorpy/: api.py  audio_ffmpeg.py  composicion.py  config.py  duracion_archivo.py  exportador.py  formato_archivo.py  fragmentacion.py  fuente_contenido.py  fuente_youtube_ytdlp.py  metadata_archivo.py  metadata_ffprobe.py  motivos.py  motor_con_fragmentacion.py  motor_openai.py  motor_transcripcion.py  procesador_audio.py  procesar_transcripcion.py  tamano_archivo.py  url_youtube.py  validador_entrada.py
src/video_transcriber/: __init__.py  api.py  cli.py  exporters.py  models.py  transcriber.py  utils.py
src/video_transcriber_local.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_utils.py
tests/integration/: conftest.py  test_api_e2e.py  test_audio_ffmpeg.py  test_fuente_youtube_ytdlp.py  test_metadata_ffprobe.py  test_motor_openai_real.py
tests/unit/: test_api.py  test_composicion.py  test_config.py  test_duracion_archivo.py  test_exportador_docx.py  test_exportador_pdf.py  test_exportador_txt.py  test_formato_archivo.py  test_fragmentacion.py  test_fuente_contenido.py  test_metadata_archivo.py  test_motor_con_fragmentacion.py  test_motor_openai.py  test_motor_transcripcion.py  test_procesador_audio.py  test_procesar_transcripcion.py  test_procesar_url.py  test_seleccionar_exportador.py  test_tamano_archivo.py  test_url_youtube.py  test_validador_entrada.py
(+2 files in other folders)
